--- a/static/css/style.css
+++ b/static/css/style.css
@@ -729,6 +729,28 @@ div strong {
     display: none;
 }
 
+/* Contact page */
+
+.textarea-space {
+    height: 12rem;
+}
+
+.flash-messages-email {
+    background-color: #d0ccb4;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    padding: 15px 0px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    top: 20px;
+    left: 0px;
+    z-index: 1;
+    display: none;
+}
 
 /* Override Materialize */
 
