--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,6 +25,8 @@
     We value your privacy and will never share your information with anyone.
 </p>
 
+<p id="flash-messages-email" class="flash-messages-email"></p> 
+
 <div class="row background-grey-ddd margin-top-fifty padding-top-twentyfive padding-bottom-twentyfive">
     <form onsubmit="return sendMail(this);" class="col s12 m8 offset-m2">
         <!-- Name -->
@@ -40,15 +42,20 @@
             <p class="input-title col s10 offset-s1">Your email</p>
             <div class="input-field col s10 offset-s1 input-space">
                 <input id="email" name="email" type="email" class="validate" required>
-                <label for="password">Enter your email...</label>
+                <label for="email">Enter your email...</label>
             </div>
         </div>
         <!-- Message -->
+        <div class="row">
+            <p class="input-title col s10 offset-s1">Your message</p>
+            <div class="input-field col s10 offset-s1 input-space textarea-space">
+                <textarea placeholder="Type your message..." id="message" name="message" type="text" class="materialize-textarea" required></textarea>
+            </div>
+        </div>
 
-
-        <!-- Sign Up Button -->
+        <!-- Submit button -->
         <div class="row margin-top-fifty">
-            <button type="submit" class="col s6 offset-s3 green-button-full cursor-pointer">Log in</button>
+            <button type="submit" class="col s6 offset-s3 green-button-full cursor-pointer">Submit</button>
         </div>
     </form>
   </div>
