--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,11 +27,11 @@
 
 <p id="flash-messages-email" class="flash-messages-email"></p> 
 
-<div class="row background-grey-ddd margin-top-fifty padding-top-twentyfive padding-bottom-twentyfive">
+<div class="row background-green margin-top-fifty padding-top-twentyfive padding-bottom-twentyfive">
     <form onsubmit="return sendMail(this);" class="col s12 m8 offset-m2">
         <!-- Name -->
         <div class="row">
-            <p class="input-title col s10 offset-s1">Your name</p>
+            <p class="input-title col s10 offset-s1 white-text">Your name</p>
             <div class="input-field col s10 offset-s1 input-space">
                 <input id="name" name="name" type="text" required>
                 <label for="name">Enter your name...</label>
@@ -39,7 +39,7 @@
         </div>
         <!-- Email -->
         <div class="row">
-            <p class="input-title col s10 offset-s1">Your email</p>
+            <p class="input-title col s10 offset-s1 white-text">Your email</p>
             <div class="input-field col s10 offset-s1 input-space">
                 <input id="email" name="email" type="email" class="validate" required>
                 <label for="email">Enter your email...</label>
@@ -47,7 +47,7 @@
         </div>
         <!-- Message -->
         <div class="row">
-            <p class="input-title col s10 offset-s1">Your message</p>
+            <p class="input-title col s10 offset-s1 white-text">Your message</p>
             <div class="input-field col s10 offset-s1 input-space textarea-space">
                 <textarea placeholder="Type your message..." id="message" name="message" type="text" class="materialize-textarea" required></textarea>
             </div>
@@ -55,7 +55,7 @@
 
         <!-- Submit button -->
         <div class="row margin-top-fifty">
-            <button type="submit" class="col s6 offset-s3 green-button-full cursor-pointer">Submit</button>
+            <button type="submit" class="col s6 offset-s3 lgreen-button-full cursor-pointer">Submit</button>
         </div>
     </form>
   </div>
