FEAT: Make methods split into separate lines

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -562,6 +562,11 @@ div strong {
     display: none;
 }
 
+.par-ingredients {
+    line-height: 0.75rem;
+}
+
+.par-ingredients
 
 /* Add recipe page */
 
