--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -70,6 +70,7 @@
                 </textarea>
             </div>
         </div>
+        <p class="make-sure"><i class="fas fa-arrow-circle-right"></i> &nbsp; Make sure that you've put each ingredient and each method on a new line.</p>
 
         <!-- Image -->
         <div class="row">
