--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -65,6 +65,7 @@
                 <textarea placeholder="(new line for each step)" id="method" name="method" class="materialize-textarea validate" required></textarea>
             </div>
         </div>
+        <p class="make-sure"><i class="fas fa-arrow-circle-right"></i> &nbsp; Make sure that you've put each ingredient and each method on a new line.</p>
 
         <!-- Image -->
         <div class="row">
