--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="center-align margin-top-fifty"><span>404</span></h3>
+<p class="center-align four-oh-four margin-top-fifty">404</p>
+<p class="center-align par-four-oh-four">Sorry... Page not found.</p>
+<p class="center-align margin-top-fifty margin-bottom-hundred">To go back to home page <a href="{{ url_for('landing') }}" class="click-here">click here.</a></p>
 
 {% endblock %}
