--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+<!-- 404 message -->
 <p class="center-align four-oh-four margin-top-fifty">404</p>
 <p class="center-align par-four-oh-four">Sorry... Page not found.</p>
 <p class="center-align margin-top-fifty margin-bottom-hundred">To go back to home page <a href="{{ url_for('landing') }}" class="click-here">click here.</a></p>
