--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block parallax %}
-    <!-- Parallax effect images -->
+
+    <!-- Materialize parallax effect images -->
     <div class="row parallax-container landing-banner-desktop">
         <h1 class="col s10 offset-s1 m7 offset-m1 l5 offset-l2">Your Online Recipe Manager</h1>
         <p class="col s10 offset-s1 l8 offset-l2">Create your own cookbook and fill it with your favourite recipes.</p>
@@ -61,4 +62,5 @@
         </div> 
     </div>
     <div class="col s12 white-panel"></div>
+
 {% endblock %}
