FIX: Couple of minor warnings in HTML validator

--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -21,13 +21,13 @@
             <div class="row">
                 <!-- Recipe image -->
 
-                <!----- CODE CREDIT - Handle broken image link ----->
+                <!-- CODE CREDIT - Handle broken image link -->
                 <!-- https://themeisle.com/blog/missing-images-on-website/ -->
 
                 <img class="col s12 m8" src="{{ fullrecipe.image }}" alt="Recipe" 
                 onError="this.onerror=null; this.src='https://i.imgur.com/pKDfecc.jpg';">
 
-                <!----- END OF CODE CREDIT ----->
+                <!-- END OF CODE CREDIT -->
 
                 <!-- Ingredients -->
                 <div class="col s12 m4 margin-top-twentyfive">
