DOCS: Adding HTML validator test results to README file

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -52,7 +52,7 @@
         <div class="row">
             <p class="input-title col s10 offset-s1 white-text">Your message</p>
             <div class="input-field col s10 offset-s1 input-space textarea-space">
-                <textarea placeholder="Type your message..." id="message" name="message" type="text" class="materialize-textarea" required></textarea>
+                <textarea placeholder="Type your message..." id="message" name="message" class="materialize-textarea" required></textarea>
             </div>
         </div>
 
