--- a/templates/signup.html
+++ b/templates/signup.html
@@ -42,6 +42,9 @@
         <div id="signup-button" class="row margin-top-fifty">
             <button type="submit" class="col s6 offset-s3 green-button-full cursor-pointer">Sign up</button>
         </div>
+        <div id="signup-button-inactive" class="row margin-top-fifty">
+            <p type="submit" class="col s6 offset-s3 green-button-full-inactive cursor-pointer opacity-fifty">Sign up</p>
+        </div>
     </form>
   </div>
   
