--- a/templates/categories.html
+++ b/templates/categories.html
@@ -10,46 +10,17 @@
             <!-- Edit/Delete buttons (desktop) -->
             <a href="{{ url_for('edit_category', category_id=category._id) }}" class="col s2 m2 l2 green-button-full cat-button-desktop">Edit</a>
             <a href="{{ url_for('delete_category', category_id=category._id) }}" class="col s2 m2 l2 red-button-full cat-button-desktop">Delete</a>
-
-            <!-- PROBLEM WITH ADDING MODAL WHERE MULTIPLE ID's WERE CREATED USING FOR LOOP -->
-            
-            <!-- <a href="{{ '#' + category.category_name }}" class="col s2 m2 l2 red-button-full cat-button-desktop">Delete</a> -->
-
-            <!-- Modal Structure (desktop) -->
-            <!-- <div id="{{ category.category_name }}" class="modal">
-                <div class="modal-content">
-                    <h5>Delete Category?</h5>
-                </div>
-                <div class="modal-footer">
-                    <a href="{{ url_for('delete_category', category_id=category._id) }}"
-                        class="modal-close waves-effect waves-green btn-flat modal-option">Yes</a>
-                    <a href="#!" class="modal-close waves-effect waves-green btn-flat modal-option">No</a>
-                </div>
-            </div> -->
             
             <!-- Edit/Delete buttons (mobile) -->
             <a href="{{ url_for('edit_category', category_id=category._id) }}" aria-label="Edit category"
                 class="col s2 m2 l2 green-button-full cat-button-mobile"><i class="fas fa-pen"></i></a>
             <a href="{{ url_for('delete_category', category_id=category._id) }}" aria-label="Delete category"
                 class="col s2 m2 l2 red-button-full cat-button-mobile"><i class="fas fa-trash-alt"></i></a>
-            
-            <!-- <a href="{{ '#' + category.category_name }}" class="col s2 m2 l2 red-button-full cat-button-mobile"><i class="fas fa-trash-alt"></i></a> -->
-
-            <!-- Modal Structure (mobile) -->
-            <!-- <div id="{{ category.category_name }}" class="modal">
-                <div class="modal-content">
-                    <h5>Delete Category?</h5>
-                </div>
-                <div class="modal-footer">
-                    <a href="{{ url_for('delete_category', category_id=category._id) }}"
-                        class="modal-close waves-effect waves-green btn-flat modal-option">Yes</a>
-                    <a href="#!" class="modal-close waves-effect waves-green btn-flat modal-option">No</a>
-                </div>
-            </div> -->
-
         </div>
+
     {% endfor %}
 
+    <!-- Add category button -->
     <div class="row">
         <p class="col s6 m6 offset-m1 l4 offset-l2 card-panel category-field"> ... </p>
         <a href="{{ url_for('add_category') }}" class="col s4 m4 l3 green-border-button cat-button-desktop">Add Category</a>
