--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -11,7 +11,7 @@
             <label class="add-recipe-label" for="category_name"><i class="fas fa-folder-open add-recipe-icon"></i>Category Name:</label>
             <div class="input-field col s12">
                 <input id="category_name" name="category_name" type="text" value="{{ category.category_name }}"
-                    placeholder="(max 20 characters)" maxlength="20" class="validate" required>
+                    placeholder="(max 20 characters)" minlength="2" maxlength="20" class="validate" required>
             </div>
         </div>
 
